2-events-comunication/deploy-configuration/service.yml
apiVersion: v1
kind: Service
metadata:
  name: request-service
spec:
  selector:
    app: request-service
  ports:
    - port: 80
      targetPort: 8080
