2-events-comunication/deploy-configuration/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api/requests
        pathType: Prefix
        backend:
          service:
            name: request-service
            port:
              number: 80
